objects/Product2.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CodigoERP__c</fullName>
        <externalId>true</externalId>
        <label>Código ERP</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StatusIntegracao__c</fullName>
        <label>Status Integração</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StatusIntegracao</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TentativasIntegracao__c</fullName>
        <label>Tentativas Integracao</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>